Week 3 bug fix
